--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'br.com.alura.orgs'
 }
 
 dependencies {
@@ -61,7 +62,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
+
+    testImplementation "io.mockk:mockk:1.12.3"
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
     implementation "io.coil-kt:coil:1.4.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
